[package]
name = "centipede"
version = "0.1.0"
edition = "2021"

[dependencies]
async-executor = "1.5.1"
async-io = "1.13.0"
chacha20poly1305 = "0.10.1"
cidr = "0.2.2"
clap = { version = "4.3.23", features = ["derive"] }
futures-lite = "1.13.0"
socket2 = { version = "0.5.3", features = ["all"] }
tun = "0.5.5"
