[package]
name = "centipede"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
cidr = { version = "0.2.2", features = ["serde"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
flurry = "0.4.0"
hypertube = "0.2.0"
log = "0.4.20"
mio = { version = "0.8.8", features = ["os-poll", "os-ext"] }
num_cpus = "1.16.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = { version = "3.3.0", features = ["base64"] }
socket2 = { version = "0.5.3", features = ["all"] }
stakker = { version = "0.2.10", features = ["logger"] }
thiserror = "1.0.47"
toml = "0.7.6"
x25519-dalek = { version = "2.0.0", features = ["serde"] }

[profile.dev]
opt-level = 1

[profile.release]
debug = true
lto = "thin"
