[package]
name = "centipede_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
centipede_control = { version = "0.1.0", path = "../centipede_control" }
centipede_tunnel = { version = "0.1.0", path = "../centipede_tunnel" }
cidr = { version = "0.2.2", features = ["serde"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "serde"] }
hypertube = "0.2.0"
log = "0.4.20"
num_cpus = "1.16.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["base64"] }
toml = "0.7.6"
