[package]
name = "centipede_control"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
centipede_tunnel = { version = "0.1.0", path = "../centipede_tunnel" }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
cidr = { version = "0.2.2", features = ["serde"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "serde"] }
log = "0.4.20"
mio = { version = "0.8.8", features = ["os-poll", "os-ext"] }
rand = "0.8.5"
replace_with = "0.1.7"
serde = { version = "1.0.188", features = ["derive"] }
socket2 = { version = "0.5.3", features = ["all"] }
stakker = { version = "0.2.10", features = ["logger"] }
stakker_mio = "0.2.5"
thiserror = "1.0.47"
x25519-dalek = { version = "2.0.0", features = ["serde"] }
