[package]
name = "centipede_tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
flurry = "0.4.0"
hypertube = "0.2.0"
log = "0.4.20"
thiserror = "1.0.47"
mio = { version = "0.8.8", features = ["os-poll", "os-ext"] }
socket2 = { version = "0.5.3", features = ["all"] }
x25519-dalek = { version = "2.0.0", features = ["serde"] }
